--- a/themes/material/css/header.css
+++ b/themes/material/css/header.css
@@ -17,6 +17,10 @@ header.fixed {
     top: 0;
 }
 
+header.relative {
+    position: relative;
+}
+
 @media screen and (min-width: 1024px) {
     main > section > div:first-child:nth-last-child(2) ~ div > header.fixed  {
         width: inherit;
